Fix bug #13424 locking view with query cache enabled crashes server

For LOCK view is opened but not prepared thus leaving 'table' field set to
NULL. invalidate_locked_for_write() wasn't checking that and call to 
invalidate_table(NULL) crashes server.

To invalidate_locked_for_write() added check that ensures that table is
completely opened.